// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.table.head-row > cardView 1`] = `
.c0 {
  display: block;
  position: relative;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c1 {
  border-bottom: 1px solid rgb(211, 214, 220);
  overflow: hidden;
  display: none;
  background-color: rgb(241, 242, 244);
}

<div
  class="c0 c1 table__headerRow"
  data-role="table-header-row"
/>
`;

exports[`com.mgmtp.a12.widgets.table.head-row > default 1`] = `
.c0 {
  display: flex;
  position: relative;
}

.c1 {
  border-bottom: 1px solid rgb(211, 214, 220);
  overflow: hidden;
  background-color: rgb(241, 242, 244);
}

<div
  class="c0 c1 table__headerRow"
  data-role="table-header-row"
  role="grid"
/>
`;
